# universal-makefile

./: .NEW_VERSION.tmp  .cursorignore  .env  .env.test  .gitignore  BUILD_ARGS  CHANGELOG.md  GETTING_STARTED.md  HELP.md  LICENSE  Makefile  README.md  VERSION  install.sh  install.v2.sh  install_detail.sh  installl_without_errtrace.sh  project.mk  setup.legacy.sh  setup.sh  setup.v2.sh
.cursor/rules/: make-help-stability.mdc  make-usage.mdc  project-structure.mdc  setup-behavior.mdc  tests-e2e.mdc  update-strategy.mdc  version-separation.mdc  workflows.mdc
.github/workflows/: install-e2e.yml  release.yml
docs/: DEPLOY_HOOKS.md
examples/: README.md
examples/environments/: development.mk  production.mk  staging.mk
examples/nginxbox-project/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
examples/nodejs-project/: Dockerfile  package.json  project.mk
examples/python-project/: Dockerfile  project.mk  pyproject.toml
examples/python-project/app/: main.py
github/workflows/: build-dev.yml  dispatch-deploy.yml  publish-release.yml  release.yml
makefiles/: bluegreen.mk  cleanup.mk  colors.mk  compose.mk  core copy.mk  core.mk  docker.mk  env-file-legacy.mk  env-file.mk  env-file.mk.backup  example.mk  git-flow.mk  help.mk  show_grouped.awk  version-check.mk  version.mk
scripts/: __init__.py  bump-version.sh  compute_build_tag.sh  consul_api_client.py  consul_kv.py  consul_kv.sh  consul_web.py  consul_web.sh  create-release-branch.sh  custom-clean.sh  custom-health-check.sh  default_hooks.py  deploy_hooks.py  docker_manager.py  env_manager.py  fetch_secrets.py  fetch_source.py  fetch_source.sh  health-check.sh  install_workflows.sh  lib_errtrace.sh  lib_installer.sh  lib_release.sh  lib_scaffold.sh  parse_version.sh  post_deploy.py  pre_deploy.py  registry-list-tags.sh  release_manager.py  remote_hook_executor.py  rollback.py  run_all_makefile_tests.py  test-install.sh  test-install.sh.debug  test-setup.sh  test_docker.py  test_env_validation.py  test_error_handling.py  test_makefile.py  test_ssm.py  (+3 more)
scripts/deployment/: custom-health-check.sh  health-check.sh
templates/: .gitignore.template  bluegreen.conf.template  deploy-hooks.yml.template  docker-compose.bluegreen-noproxy.yml.template  docker-compose.bluegreen.yml.template  docker-compose.yml.template  nginx-proxy.conf.template  project.mk.template
(+4 files in other folders)
